--- a/client/body/body.css
+++ b/client/body/body.css
@@ -1,18 +1,27 @@
 body {
   background-color: rgb(242, 242, 242);
   color: rgb(51, 51, 51);
+  font-family: "Computer Modern Serif", serif;
+}
+
+#heading {
+  margin-top: 3cm;
 }
 
 #me {
   text-align: center;
   font-size: 70px;
-  font-family: "Computer Modern Serif", serif;
-  padding-top: 100px;
 }
 
 #tagline {
   text-align: center;
   font-size: 20px;
-  font-family: "Computer Modern Serif", serif;
   font-style: italic;
 }
+
+#skills {
+  text-align: center;
+  font-style: normal;
+  margin-top: 120px;
+}
+
