--- a/styles.css
+++ b/styles.css
@@ -13,65 +13,65 @@ body {
 
 
 
-/*#heading {*/
-  /*margin-top: 3cm;*/
-/*}*/
+#heading {
+  margin-top: 3cm;
+}
 
-/*#me {*/
-  /*text-align: center;*/
-  /*font-size: 70px;*/
-/*}*/
+#me {
+  text-align: center;
+  font-size: 70px;
+}
 
-/*#tagline {*/
-  /*text-align: center;*/
-  /*font-size: 20px;*/
-  /*font-style: italic;*/
-/*}*/
+#tagline {
+  text-align: center;
+  font-size: 20px;
+  font-style: italic;
+}
 
-/*#skills {*/
-  /*text-align: center;*/
-  /*font-style: normal;*/
-  /*margin-top: 150px;*/
-/*}*/
+#skills {
+  text-align: center;
+  font-style: normal;
+  margin-top: 150px;
+}
 
-/*#experience {*/
-  /*margin-top: 80px;*/
-/*}*/
+#experience {
+  margin-top: 80px;
+}
 
-/*#experience h1 {*/
-  /*text-align: center;*/
-  /*font-style: normal;*/
-/*}*/
+#experience h1 {
+  text-align: center;
+  font-style: normal;
+}
 
 
-/*#navbar-bottom {*/
-  /*width: 100%;*/
-  /*height: 50px;*/
-  /*position: fixed;*/
-  /*background-color: black;*/
-/*}*/
+#navbar-bottom {
+  width: 100%;
+  height: 50px;
+  position: fixed;
+  background-color: black;
+}
 
-/*.tex sub, .latex sub, .latex sup {*/
-  /*text-transform: uppercase;*/
-/*}*/
+.tex sub, .latex sub, .latex sup {
+  text-transform: uppercase;
+}
 
-/*.tex sub, .latex sub {*/
-  /*vertical-align: -0.5ex;*/
-  /*margin-left: -0.1667em;*/
-  /*margin-right: -0.125em;*/
-/*}*/
+.tex sub, .latex sub {
+  vertical-align: -0.5ex;
+  margin-left: -0.1667em;
+  margin-right: -0.125em;
+}
 
-/*.tex, .latex, .tex sub, .latex sub {*/
-  /*font-size: 1em;*/
-/*}*/
+.tex, .latex, .tex sub, .latex sub {
+  font-size: 1em;
+}
 
-/*.latex sup {*/
-  /*font-size: 0.85em;*/
-  /*vertical-align: .3em;*/
-  /*margin-left: -0.36em;*/
-  /*margin-right: -0.15em;*/
-/*}*/
+.latex sup {
+  font-size: 0.85em;
+  vertical-align: .3em;
+  margin-left: -0.36em;
+  margin-right: -0.15em;
+}
 
-/*#a {*/
-  /*font-size: .74em;*/
-/*}*/
+#a {
+  font-size: .74em;
+}
